# Dev-portal

./: .env.dev  .env.test  README.md  docker-compose-full.yml  docker-compose.yml  index.yaml  justfile  manage-services.sh
.github/workflows/: backend_ci_cd.yml  frontend_ci_cd.yml  helm_ci_cd.yml  keycloak_theme_ci_cd.yml  on-pull-request.yaml  user-sync-tool_ci_cd.yml
Helm/dev-portal/: Chart.yaml  README.md  values.yaml
Helm/dev-portal/templates/: _helpers.tpl  backend-configmap.yaml  backend-deployment.yaml  backend-hpa.yaml  backend-secret.yaml  backend-service.yaml  frontend-configmap.yaml  frontend-deployment.yaml  frontend-hpa.yaml  frontend-service.yaml  imagepull-secrtet.yaml  ingress.yaml
apisix_conf/: README.md  config2.yaml  setup.sh
backend/: .gitignore  Dockerfile  README.MD  config.default.yaml  generate_config-yaml.sh  pom.xml  pyproject.toml  secrets.default.yaml  secrets.test.yaml
backend/app/: config.py  constants.py  exceptions.py  main.py
backend/app/dependencies/: http_client.py  jwt_token.py
backend/app/models/: access_token.py  apisix.py  keycloak.py  request.py  response.py  responses.py  status.py  vault.py
backend/app/routers/: admin.py  apikey.py  health.py  routes.py  status.py  users.py
backend/app/services/: apikey.py  apisix.py  keycloak.py  status.py  users.py  vault.py
backend/scripts/admin/: delete_user.sh  disable_user.sh  enable_user.sh  get_admin_token.sh  remove_user_from_group.sh  update_user_to_group.sh
backend/scripts/admin/config/: .local-env  load_config.sh
backend/scripts/poetry/: scripts.py
backend/src/main/java/com/apiportal/backend/: BackendApplication.java
backend/src/main/java/com/apiportal/backend/apisix/: ApisixRestClient.java
backend/src/main/java/com/apiportal/backend/apisix/models/: Consumer.java  KeyAuth.java  Plugins.java
backend/src/main/java/com/apiportal/backend/apisix/models/Consumer/: Consumer.java  KeyAuth.java  Plugins.java
backend/src/main/java/com/apiportal/backend/apisix/models/Route/: JwtAuth.java  KeyAuth.java  List.java  Nodes.java  Plugins.java  Routes.java  Upstream.java  Value.java
backend/src/main/java/com/apiportal/backend/config/: VaultConfig.java
backend/src/main/java/com/apiportal/backend/controller/: ApikeyController.java
backend/src/main/java/com/apiportal/backend/infra/security/: AccessToken.java  InvalidTokenException.java  JwtTokenValidator.java
backend/src/main/java/com/apiportal/backend/infra/security/annotation/: AllowedRoles.java  RolesAspect.java
backend/src/main/java/com/apiportal/backend/infra/security/config/: AccessTokenAuthenticationFailureHandler.java  AccessTokenFilter.java  AuthorizationAccessDeniedHandler.java  JwtAuthentication.java  KeycloakAuthenticationProvider.java  KeycloakJwkProvider.java  SecurityConfig.java
backend/src/main/java/com/apiportal/backend/models/: MessageObject.java  ServerStatus.java  User.java  VaultApiInfo.java
backend/src/main/java/com/apiportal/backend/service/: ApiKeyService.java  VaultService.java
backend/src/main/resources/: application-dev.yaml  application-localdev.yaml  application-prod.yaml
backend/src/test/groovy/com/apiportal/backend/controller/: JwtTokenValidatorSpec.groovy
backend/src/test/java/com/apiportal/backend/controller/: ApikeyControllerSecurityE2ETest.java  MovieControllerSecurityE2ETest.java
backend/src/test/resources/: application.yaml
backend/tests/: conftest.py  getapikey_test.py
backend/tests/data/: apisix.py  keycloak.py  realm-export.json
backend/tests/routers/: admin_test.py  apikey_test.py  health_test.py  routes_test.py  status_test.py  users_test.py
backend/tests/services/: apikey_service_test.py  apisix_test.py  status_service_test.py  vault_test.py
dev-portal-user-sync/: config.default.yaml  pyproject.toml  secrets.default.yaml
dev-portal-user-sync/app/: config.py  exceptions.py  main.py
dev-portal-user-sync/app/dependencies/: http_client.py
dev-portal-user-sync/app/models/: apisix.py  vault.py
dev-portal-user-sync/app/services/: apisix.py  sync.py  vault.py
dev-portal-user-sync/tests/: conftest.py
dev-portal-user-sync/tests/services/: apisix_test.py  vault_test.py
foobar/foobar/: package.json
keycloak/: Dockerfile  README.md
keycloak/config/: dummy-users.json  setup.sh
keycloak/config/realm_export/: realm-export.json
ui/: .env  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  Dockerfile.prod  README.md  dev.env  generate_env-config.sh  index.html  package-lock.json  package.json  prod.Dockerfile  prod.env  vite.config.js
ui/public/: env-config.js  index.html
ui/src/: App.css  App.js  App.jsx  index.css  index.js  main.jsx
upstream/: web1.conf  web2.conf
user-sync-tool/: Dockerfile  README.md  pyproject.toml  secrets.test.yaml
user-sync-tool/app/: config.py  constants.py  exceptions.py  main.py
user-sync-tool/scripts/: poetry.py
user-sync-tool/tests/: conftest.py
vault/: vault-dev-server.hcl
vault/config/: apisix-policy.hcl  setup.sh
(+30 files in other folders)
