[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.MD"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
python-jose = "^3.3.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
hvac = "^2.1.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.2"
safety = "^3.0.1"
bandit = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-dev = "uvicorn app.main:app --reload"

[tool.black]
line-length = 120